--- a/TypeScript/Components/Ejercicio01/HolaMundo.html
+++ b/TypeScript/Components/Ejercicio01/HolaMundo.html
@@ -3,28 +3,8 @@
 <head>
 <meta charset="UTF -8">
 <title>Hola Mundo </title>
-<script type="module" src="HolaMundo.js"></script>
-<!--<script>
-
-    class TextoSaludo extends HTMLElement {
-        constructor() {
-            super();
-        }
-        connectedCallback() {
-            this.innerHTML = '<div> <p onclick="saludar()">Hola Mundo</p> </div>';
-          
-        }
-    }
-
-    function saludar(){
-        alert("Hola Mundo");
-    }
-
-    window.customElements.define('texto-saludo', TextoSaludo );
-
-
-</script>
--->
+<script src="HolaMundo.js"></script>
+<script ></script>
 </head>
 <body>
     <texto-saludo id="holaMundo"></texto-saludo >
